Fixed view on small screens

--- a/frontend/src/scenes/session-recordings/SessionRecordingsPlaylist.scss
+++ b/frontend/src/scenes/session-recordings/SessionRecordingsPlaylist.scss
@@ -2,7 +2,7 @@
 
 .SessionRecordingsPlaylist {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 1rem;
 
     @include screen($md) {
